syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.adamalang.grpc.proto";
option java_outer_classname = "OverlordService";

package adama_service;

service Overlord {
  /** establish a connection from a web machine to the overlord */
  rpc Web(stream WebForward) returns (stream WebReverse) {}

}

message Register {
  string name = 1;
}

message SignalHeat {
  double cpu = 1;
  double memory = 2;
}

message WebForward  {
  oneof Operation {
    Register register = 1;
    SignalHeat heat = 2;
  }
}

message Registered {
}

message WebContent {
  string uri = 1;
  string content_type = 2;
  bytes content = 3;
}

message WebReverse {
  oneof Operation {
    Registered registered = 1;
    WebContent content = 2;
  }
}